[package]
name = "sarc-rs"
version = "0.1.0"
authors = ["Caleb Smith <caleb@myrvmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bare-io = "0.2"
binread = "2.1"
binwrite = "0.2"
cached = "0.23"
derivative = "2.2"
indexmap = "1.6"
lazy_static = "1.4"
num = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.15"

[dev-dependencies]
glob = "0.3"
