[package]
name = "sarc-rs"
description = "A simple to use library for parsing and creating Nintendo SARC files in Rust"
repository = "https://github.com/NiceneNerd/sarc-rs"
documentation = "https://docs.rs/sarc-rs"
version = "0.1.0"
keywords = ["Nintendo", "SARC", "archive", "game", "Zelda"]
categories = ["parser-implementations", "game-development"]
readme = "README.md"
license = "GPL-3.0-or-later"
authors = ["Caleb Smith <email@calebdixonsmith.top>"]
edition = "2018"

[dependencies]
binread = "2.1"
binwrite = "0.2"
cached = "0.23"
derivative = "2.2"
indexmap = "1.6"
lazy_static = "1.4"
num = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.15"

[dev-dependencies]
glob = "0.3"
